# CaptionEditor

./: .gitignore  README.md  conversions.json  empty_conversions.json  pyproject.toml  requirements.txt  test_vtt-converted.vtt  tox.ini
src/: converter.py
src/captionconverter/: __init__.py  converter.py
src/captioneditor/: editor.py
tests/: reference_dest_captions.vtt  test_captions-converted.vtt  test_captions.vtt  test_conversions.json  test_converter.py  test_utils.py
tests/test_data/: reference_dest_captions.vtt  test_captions-converted.vtt
tests/test_data/conversions/: conversions.json  invalid_conversions.json
tests/test_data/converted_captions/: converted.dfxp  converted.srt  converted.vtt  cutoff.vtt  no_cutoff_offset.vtt
tests/test_data/initial_captions/: test_dfxp.dfxp  test_srt.srt  test_vtt.vtt
