[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "WebVTT Caption Converter"
author = "Henry Speaker"
author_email = "HenrySpeaker24@gmail.com"
readme = "README.md"
description = "A tool to replace words and phrases in a WebVTT file with new words or phrases, and to offset each caption by a specified amount."
dependencies = [
    "black",
    "build",
    "coverage",
    "flashtext",
    "pytest",
    "setuptools",
    "webvtt-py"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=prepend",
]

[tool.setuptools_scm]