[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "Caption-Converter"
authors = [
    {name = "Henry Speaker", email = "HenrySpeaker24@gmail.com"},
]
readme = "README.md"
description = "A tool to replace words and phrases in a WebVTT file with new words or phrases, and to offset each caption by a specified amount."
dependencies = [
    "black",
    "build",
    "coverage",
    "flashtext",
    "pytest",
    "setuptools",
    "webvtt-py",
    "pycaption"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=prepend",
]
filterwarnings = [
    "ignore:It looks like you're parsing an XML document using an HTML parser.",
]

[tool.setuptools_scm]
