[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "captionconverter"
authors = [
    {name = "Henry Speaker", email = "HenrySpeaker24@gmail.com"},
]
readme = "README.md"
description = "A tool to replace words and phrases in a caption file with new words or phrases, offset each caption by a specified amount, and cut off captions after a specified time."
dependencies = [
    "coverage",
    "flashtext2",
    "pytest",
    "setuptools",
    "webvtt-py",
    "pycaption"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=prepend",
]
filterwarnings = [
    "ignore:It looks like you're parsing an XML document using an HTML parser.",
]

[tool.setuptools_scm]

[project.scripts]
convert-captions = "captionconverter.converter:main"
